# luna-service2

./: .gitignore  CMakeLists.txt  README.md  oss-pkg-info.yaml
files/conf/: CMakeLists.txt  ls-hubd.conf.in
files/test/: CMakeLists.txt  coverage.in  libtest.sh.in  run_all_tests.in  run_test.in  run_with_hub.in
src/examples/c/: CMakeLists.txt  README.md
src/examples/c/files/sysbus/: template.api.json.in  template.manifest.json.in  template.service.in
src/examples/c/src/: main.c
src/libluna-service2/: CMakeLists.txt  base.c  base.h  callmap.c  category.c  category.h  clock.c  clock.h  debug_methods.c  debug_methods.h  error.h  log.h  log_ids.h  mainloop.c  message.c  message.h  payload.c  payload_internal.h  pmtrace_ls2.h  pmtrace_ls2_provider.c  pmtrace_ls2_provider.h  security_hacks.c  simple_pbnjson.c  subscription.c  subscription.h  timersource.c  timersource.h  transport.c  transport.h  transport_channel.c  transport_channel.h  transport_client.c  transport_client.h  transport_handlers.h  transport_incoming.c  transport_incoming.h  transport_message.c  transport_message.h  transport_outgoing.c  transport_outgoing.h  (+15 more)
src/libluna-service2++/: CMakeLists.txt  call.cpp  condition_variable.cpp  handle.cpp  json_payload.cpp  message.cpp  palm_service.cpp  subscription.cpp  transport.cpp
src/libluna-service2++/test/: CMakeLists.txt  category_notification.conf  category_notification.cpp  metainfo_example.conf  metainfo_example.cpp  test_call.conf  test_call.cpp  test_call_service.cpp  test_category.conf  test_category.cpp  test_client.conf  test_client.cpp  test_deprecated_security.conf  test_deprecated_security.cpp  test_disconnection.conf  test_disconnection.cpp  test_error.cpp  test_example++.conf  test_example++.cpp  test_idletimeout.conf  test_idletimeout.cpp  test_idletimeout_service.cpp  test_jsonpayload.cpp  test_payload.conf  test_payload.cpp  test_service.conf  test_service.cpp  test_subscription_cancel.conf  test_subscription_cancel.cpp  test_subscription_cxx.conf  test_subscription_cxx.cpp
src/libluna-service2/test/: CMakeLists.txt  test_base.c  test_callmap.c  test_clock.c  test_debug_methods.c  test_example.c  test_example.conf  test_mainloop.c  test_message.c  test_subscription.c  test_timersource.c  test_transport.c  test_transport_channel.c  test_transport_client.c  test_transport_incoming.c  test_transport_message.c  test_transport_outgoing.c  test_transport_security.c  test_transport_serial.c  test_transport_shm.c  test_transport_signal.c  test_transport_utils.c  test_utils.c
src/ls-hubd/: CMakeLists.txt  active_permission_map.cpp  active_permission_map.hpp  active_role_map.cpp  active_role_map.hpp  client_id.cpp  client_id.hpp  client_map.cpp  client_map.hpp  conf.cpp  conf.hpp  file_parser.cpp  file_parser.hpp  file_schema.cpp  file_schema.hpp  groups.cpp  groups.hpp  groups_map.cpp  groups_map.hpp  hub.cpp  hub.hpp  hub_service.cpp  hub_service.hpp  hublane.cpp  hublane.hpp  manifest.cpp  manifest.hpp  pattern.cpp  pattern.hpp  patternqueue.cpp  patternqueue.hpp  permission.cpp  permission.hpp  permissions_map.cpp  permissions_map.hpp  pjsax_bounce.hpp  role.cpp  role.hpp  role_map.cpp  role_map.hpp  (+16 more)
src/ls-hubd/performance/: CMakeLists.txt  bench_security_data.cpp  benchmark_time.hpp  cpu_time.hpp  hub_memory.conf  hub_memory.cpp  lib_memory.conf  lib_memory.cpp  performance.conf  performance.cpp
src/ls-hubd/test/: CMakeLists.txt  external_manifest.conf  external_manifest.cpp  introspection.conf  introspection.cpp  introspection_service.cpp  lscallcancel.conf  lscallcancel.cpp  migrated_service_names.conf  migrated_service_names.cpp  missing_file.conf  missing_file.cpp  nosecurity_allowed_names.conf  nosecurity_allowed_names.cpp  nosecurity_groups.conf  nosecurity_groups.cpp  nosecurity_permissions.conf  nosecurity_permissions.cpp  nosecurity_push_role.conf  nosecurity_push_role.cpp  security_allowed_call.conf  security_allowed_call.cpp  security_allowed_names.conf  security_allowed_names.cpp  security_app_container.conf  security_app_container.cpp  security_groups.conf  security_groups.cpp  security_new2old_client.conf  security_new2old_client.cpp  security_new2old_service.cpp  security_old2new_client.conf  security_old2new_client.cpp  security_old2new_service.cpp  security_permissions.conf  security_permissions.cpp  security_push_role.conf  security_push_role.cpp  security_query_permissions.conf  security_query_permissions.cpp  (+26 more)
src/ls-hubd/test/data/containers.d/: container_invalid2.json  container_valid1.json  container_valid2.json
src/ls-hubd/test/data/malformed/permissions.d/: com.webos.bad.json
src/ls-hubd/test/data/malformed/steady/roles/: ambiguous.json  malformed1.json  malformed2.json  malformed3.json  malformed4.json  malformed5.json  malformed6.json
src/ls-hubd/test/data/manifests/: any.manifest.json  v1.manifest.json  v2.manifest.json
src/ls-hubd/test/data/manifests/provides/: v1.json  v2.json
src/ls-hubd/test/data/manifests/requires/: any.json  v1.json  v2.json
src/ls-hubd/test/data/manifests/roles/: any.json  v1.json  v2.json
src/ls-hubd/test/data/manifests/services/: v2.service
src/ls-hubd/test/data/oldformat/steady/roles/: com.webos.client.json  (+1 more)
src/ls-hubd/test/data/permissions.d/: com.webos.first.json  com.webos.second.json
src/ls-hubd/test/data/steady/roles/: com.palm.app.steady.id.json  com.webos.bar.json  com.webos.client.json  com.webos.foo.json  com.webos.foo1.json  com.webos.server.json  steady.app1.json  steady.app2.json
src/ls-hubd/test/data/volatile/permissions/: requires_v1.json  requires_v2.json
src/ls-hubd/test/data/volatile/roles/: com.palm.app.volatile.id.json  role_v1.json  role_v2.json  volatile.app1.json  volatile.app2.json  volatile.app3.json  volatile.app4.json
src/ls-monitor/: CMakeLists.txt  json_output.cpp  json_output.hpp  monitor.cpp  monitor.h  monitor_queue.cpp  monitor_queue.h
src/ls-monitor/test/: CMakeLists.txt  test_monitor.conf  test_monitor.cpp
src/luna-send/: CMakeLists.txt  luna-send.cpp
src/luna-send/test/: CMakeLists.txt  luna-send-q.conf  luna-send-q.cpp
(+66 files in other folders)
